test/classes/initializers/generics/declarations/same_type_function_equally_good.good
same_type_function_equally_good.chpl:26: error: cannot determine type instantiation based on initializers provided
